# django-api-frameworks

./: CHANGELOG.md  docker-compose.yml  justfile  pyproject.toml  readme.md
django/: Dockerfile  pyproject.toml
django-bolt/: Dockerfile  pyproject.toml
django-bolt/car/: api.py
django-bolt/tests/: test_car.py
django-ninja/: Dockerfile  pyproject.toml
django-ninja/car/: views.py
django-rapid/: Dockerfile  pyproject.toml
django-shinobi/: Dockerfile  pyproject.toml
django/car/: urls.py  views.py
django/car/management/commands/: populate.py
django/tests/: test_car.py
djangorestframework/: Dockerfile  pyproject.toml
djangorestframework/car/: serializers.py  views.py
djrest2/: Dockerfile  pyproject.toml
djrest2/car/: custom_response.py  forms.py  urls.py  views.py
djrest2/config/: urls.py
fastapi/: Dockerfile  pyproject.toml
load-testing/: Dockerfile  locustfile.py  pyproject.toml
load-testing/tests/: utils.py
