[project]
name = "django-shinobi-example"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "faker==39.0.0",
    "uvicorn[standard]",
    "Django==6.0",
    "orjson==3.11.5",
    "psycopg[binary]==3.3.2",
    # library under test
    "django-shinobi==1.4.0",
]

[tool.uv]
package = false
